fixed background img (for github pages)
-made background-attachment:inital on small screens to fix dissappearance on mobile
-added quotes to img url

mke bg size auto

bg intial

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
 
             <a class="navbar-brand" href="#">
-                <img src="/assets/imgs/STS_Logo.svg" style="width:75px; height:75px" alt="">
+                <img src="assets/imgs/STS_Logo.svg" style="width:75px; height:75px" alt="">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
