--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="showcase-bg-style">
         <div class="container align-items-center justify-content-center text-center">
         
-            <h1 class="h1 py-3 text-center text-light showcase-text-style" >SHARPEN-THE-SAW<br/>PITCH</h1>
+            <h1 class="h1 py-3 text-center text-light showcase-text-style" style="font-family: 'Lato Black';">SHARPEN-THE-SAW<br/>PITCH</h1>
             <a href="#contact">
                 <button class="btn btn-lg btn-warning shadow">Contact Us</button>
             </a>
@@ -53,7 +53,7 @@
     <!--About Us-->
     <section class="p-5 bg-dark" id="about">
         <div class="container">
-            <div class="row gx-5 gy-2 justify-content-between">
+            <div class="row gx-5 gy-2 justify-content-between align-items-center">
                 <div class="col-lg text-warning lead">
                     <h1 class="bold about-us-title" style="font-size: 100px">About Us</h1>
                     <!--
@@ -67,11 +67,11 @@
                     </ul>
                 -->
                 <p class="lead" style="font-size:16px">
-                    STS is a recreation center aimed to provide an accessible sporting and event center.</br>
-                    We are equipped with the follwing amenities.</br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  7-aside standard football field (250 seats)</br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  a seating capacity of over </br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  swimming pool </br>
+                    STS is a recreation and sports center that provides an accessible area for hosting the perfect event.</br>
+                    We are equipped with:</br></br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  a 7-aside standard football field</br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  swimming pool</br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  table tennis</br>
                 </p>
                 </div>
 
@@ -133,12 +133,12 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#question1">
-                            How do I reserve a space for an event or get pricing details.
+                            How do I reserve a space for an event or get pricing details?
                         </button>
                     </h2>
                     <div class="accordion-collapse collapse" id="question1" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            To reserve a space and get pricing details contact us <a href="#contact">here</a>.
+                            To reserve a space or get pricing details contact us <a href="#contact">here</a>.
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     </h2>
                     <div class="accordion-collapse collapse" id="question2" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            The stadium has a surround seating deisgn with over 250 seats.
+                            The stadium has a seating capacity of over 250 seats.
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                     </h2>
                     <div class="accordion-collapse collapse" id="question3" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            We have the stadium, a swimming pool, table tennis, tuck shop, changing room, toilets.
+                            We have a football field, swimming pool, table tennis, tuck shop, changing room, toilets and more additions to come.
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     </h2>
                     <div class="accordion-collapse collapse" id="question4" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            We host all sorts of events from sports, school programs, weddings, church services etc.
+                            We host all sorts of events from sporting events, school programs, celebratory programs, church services etc.
                         </div>
                     </div>
                 </div>
@@ -197,10 +197,14 @@
                     <h2 class="py-1 text-primary" style="font-family:'Lato Bold'; font-size: 50px;">Contact Us</h2>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item fw-bold">
-                            <span class="bi bi-telephone-fill p-1 text-primary" style="font-size: 22px"></span>0802 588 7608 
+                            <a href="tel:+2348025887608" class="text-dark text-decoration-none">
+                                <span class="bi bi-telephone-fill p-1 text-primary" style="font-size: 22px"></span>0802 588 7608 
+                            </a>
                         </li>
                         <li class="list-group-item fw-bold">
-                            <span class="bi bi-envelope-open-fill p-1 text-primary" style="font-size: 22px"></span>stspitch@gmail.com
+                            <a href="mailto:stspitch@gmail.com" class="text-dark text-decoration-none">
+                                <span class="bi bi-envelope-open-fill p-1 text-primary" style="font-size: 22px"></span>stspitch@gmail.com
+                            </a>
                         </li>
                         <li class="list-group-item fw-bold">
                             <a href="https://goo.gl/maps/GQxmhw5wGSz" class="text-dark text-decoration-none">
