Text changes and higher quality background image
-"Correct spelling of frequently"
-Changed seat no. in FAQ to "over 300"
-Changed info in about us
-Changed address wording

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <p class="lead" style="font-size:16px">
                     STS is a recreation and sports center that provides an accessible area for hosting the perfect event.</br>
                     We are equipped with:</br></br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  a 7-aside standard football field</br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  swimming pool</br>
-                    <span class="bi bi-bullseye" style="width:10px"></span>  table tennis</br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  A standard 7-aside football field with FIFA standard artificial grass</br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  Mini swimming pool</br>
+                    <span class="bi bi-bullseye" style="width:10px"></span>  Table tennis</br>
                 </p>
                 </div>
 
@@ -126,7 +126,7 @@
     <!--FAQ-->
     <section class="p-5 bg-warning text-dark" id="questions">
         <div class="container">
-            <h1 style="font-family:'Lato Bold'; font-size: 50px;">Freqeuntly Asked Questions</h1>
+            <h1 style="font-family:'Lato Bold'; font-size: 50px;">Frequently Asked Questions</h1>
 
             <div class="accordion" id="FAQ-Accordion">
 
@@ -151,7 +151,7 @@
                     </h2>
                     <div class="accordion-collapse collapse" id="question2" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            The stadium has a seating capacity of over 250 seats.
+                            The stadium has a seating capacity of over 300 seats.
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,10 @@
                         </li>
                         <li class="list-group-item fw-bold">
                             <a href="https://goo.gl/maps/GQxmhw5wGSz" class="text-dark text-decoration-none">
-                                <span class="bi bi-pin-map-fill p-1 text-primary float-start float-xl-none" style="font-size: 22px"></span>5 Flourish Cres, Bogije 105101, Gbogije-Ibeju, Lagos
+                                <div class="container  d-flex p-0 align-items-start">
+                                    <span class="bi bi-pin-map-fill text-primary float-start float-xl-none p-1" style="font-size: 22px"></span>
+                                    <p>5 Flourish Cres, Stadium B/Stop, Opp Access  Bank, Bogije Town. <br> 1 minute drive off Lekki-Epe Expressway. <br>Ibeju Lekki, Lagos.</p>
+                                </div>
                             </a>
                         </li>
                     </ul>
