Minor changes and fixes
Background img url fixed to show higher quality image on all screen sizes

Minor changes to FAQ text

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     </h2>
                     <div class="accordion-collapse collapse" id="question2" data-bs-parent="#FAQ-Accordion">
                         <div class="accordion-body">
-                            The stadium has a seating capacity of over 300 seats.
+                            The stadium has a seating capacity of over 300.
                         </div>
                     </div>
                 </div>
