--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="bg-primary">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
@@ -112,7 +112,7 @@
     </section>
 
     <!--Quote-->
-    <section class="p-5" id="quote">
+    <section class="p-5 bg-white" id="quote">
         <div class="container">
             <p class="text-dark text-center" style="font-family: 'Lato Bold'; font-size: 56px;">
                 "We must never be too busy to</br>
@@ -188,7 +188,7 @@
     </section>
 
     <!--Contact Us-->
-    <section class="p-5 text-dark" id="contact">
+    <section class="p-5 text-dark bg-white" id="contact">
         <div class="container">
             
             <div class="row g-5 justify-content-between align-items-center">
