Added creator tag
Put my name on the project

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
                 </a>
             </div>
         </div>
+        <div class="">Designed by John Ajao.</div>
         
     </section>
 </body>
